chronos arena added

--- a/index.html
+++ b/index.html
@@ -59,6 +59,17 @@
                 </div>
                 <img src="Images/TheLongGame.png">
             </div class="project">
+
+            <div class="project">
+                <div class="project_overlay">
+                    <iframe src="https://www.youtube.com/embed/Tojkcc5MncY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <p>Hero-based card game with simultaneous turns and predicting plays.</p>
+                    <a href="https://masterproject.itch.io/chronos-arena" target="_blank">
+                        <img src="Images/itchio.png">
+                    </a>
+                </div>
+                <img src="Images/ChronosArena.png">
+            </div class="project"
         </main>
 
     </body>
