dont blame the controller

--- a/index.html
+++ b/index.html
@@ -16,6 +16,18 @@
           <h2>masterprojectlc.github.io</h2>
         </div>
         <main>
+            <p>Still in construction!</p>
+
+            <div class="project">
+                <div class="project_overlay">
+                    <p>Action game with limited control keys. Bind and rebind them in real-time to adapt to different situations.</p>
+                    <a href="https://masterproject.itch.io/dont-blame-the-controller" target="_blank">
+                        <img src="Images/itchio.png">
+                    </a>
+                </div>
+                <img src="Images/DBTC.png">
+            </div>
+
             <div class="project">
                 <div class="project_overlay">
                     <iframe src="https://www.youtube.com/embed/uTrYnucfqP0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -25,23 +37,23 @@
                     </a>
                 </div>
                 <img src="Images/Abracajur.png">
-            </div class="project">
+            </div>
 
             <div class="project">
                 <div class="project_overlay">
                     <p>Asteroids-esque game - control gravity to disrupt and destroy enemies</p>
                     <div class="project_overlay_2">
                         <a href="https://masterproject.itch.io/gravitoids" target="_blank">
-                          <img src="Images/itchio.png">
+                            <img src="Images/itchio.png">
                         </a>
 
                         <a href="https://gamejolt.com/games/gravitoids/468599" target="_blank">
-                          <img src="Images/Gamejolt.png">
+                            <img src="Images/Gamejolt.png">
                         </a>
                     </div>
                 </div>
                 <img src="Images/Gravitoids.png">
-            </div class="project">
+            </div>
 
             <div class="project">
                 <div class="project_overlay">
@@ -49,16 +61,16 @@
                     <p>A medieval diplomacy game based on the Prisoner's Dilemma</p>
                     <div class="project_overlay_2">
                         <a href="https://masterproject.itch.io/the-long-game" target="_blank">
-                          <img src="Images/itchio.png">
+                            <img src="Images/itchio.png">
                         </a>
 
                         <a href="https://gamejolt.com/games/the_long_game/457693" target="_blank">
-                          <img src="Images/Gamejolt.png">
+                            <img src="Images/Gamejolt.png">
                         </a>
                     </div>
                 </div>
                 <img src="Images/TheLongGame.png">
-            </div class="project">
+            </div>
 
             <div class="project">
                 <div class="project_overlay">
@@ -69,7 +81,7 @@
                     </a>
                 </div>
                 <img src="Images/ChronosArena.png">
-            </div class="project"
+            </div>
         </main>
 
     </body>
