--- a/index.html
+++ b/index.html
@@ -20,6 +20,23 @@
 
             <div class="project">
                 <div class="project_overlay">
+                    <iframe src="https://www.youtube.com/embed/eK5wpTAujIg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <p>Defense typing game with a neon-like aesthetic and soundtrack inspired by early-Internet era songs.</p>
+                    <div class="project_overlay_2">
+                        <a href="https://masterproject.itch.io/lightstreak" target="_blank">
+                            <img src="Images/itchio.png">
+                        </a>
+
+                        <a href="https://gotm.io/masterproject/lightstreak" target="_blank">
+                            <img src="Images/Gotm.png">
+                        </a>
+                    </div>
+                </div>
+                <img src="Images/Lightstreak.png">
+            </div>
+
+            <div class="project">
+                <div class="project_overlay">
                     <p>Action game with limited control keys. Bind and rebind them in real-time to adapt to different situations.</p>
                     <a href="https://masterproject.itch.io/dont-blame-the-controller" target="_blank">
                         <img src="Images/itchio.png">
