added minecraft+among us and cifra

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="author" content="Dan Isamu">
-        <meta name="description" content="MasterProject's personal page. Mostly includes personal projects and stuff of that nature.">
+        <meta name="description" content="MasterProject's personal page. Mostly includes personal projects and other related stuff.">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
         <link href="Styles/style.css" rel="stylesheet" type="text/css">
         <link rel="icon" href="Images/Icon.png">
@@ -17,6 +17,29 @@
         </div>
         <main>
             <p>Still in construction!</p>
+
+            <div class="project">
+                <div class="project_overlay">
+                    <iframe src="https://www.youtube.com/embed/TSDcv-iXQqE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <p>Narrative-focused cryptography-themed game, set in a wartorn country during the 1940s. Portuguese only.</p>
+                    <a href="https://gamejolt.com/games/cifra/569637" target="_blank">
+                        <img src="Images/Gamejolt.png">
+                    </a>
+                </div>
+                <img src="Images/Cifra.png">
+            </div>
+
+
+            <div class="project">
+                <div class="project_overlay">
+                    <iframe src="https://www.youtube.com/embed/nfqVSoxF1ho" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <p>Minecraft map simulating the social deduction game Among Us, implemented using command blocks. Takes a more "physical" take compared to Phoenix SC's version.</p>
+                    <a href="https://github.com/MasterProjectLC/among_us_minecraft" target="_blank">
+                        <img src="Images/Github.png">
+                    </a>
+                </div>
+                <img src="Images/Minecraft Among Us.png">
+            </div>
 
             <div class="project">
                 <div class="project_overlay">
@@ -74,7 +97,7 @@
 
             <div class="project">
                 <div class="project_overlay">
-                    <iframe src="https://www.youtube.com/embed/-RajiuUXyaI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/AXc_niYGQ0g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <p>A medieval diplomacy game based on the Prisoner's Dilemma</p>
                     <div class="project_overlay_2">
                         <a href="https://masterproject.itch.io/the-long-game" target="_blank">
