added minecraft+among us and cifra

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <iframe src="https://www.youtube.com/embed/nfqVSoxF1ho" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <p>Minecraft map simulating the social deduction game Among Us, implemented using command blocks. Takes a more "physical" take compared to Phoenix SC's version.</p>
                     <a href="https://github.com/MasterProjectLC/among_us_minecraft" target="_blank">
-                        <img src="Images/Github.png">
+                        <img src="Images/GitHub.png">
                     </a>
                 </div>
                 <img src="Images/Minecraft Among Us.png">
