--- a/index.html
+++ b/index.html
@@ -20,8 +20,18 @@
 
             <div class="project">
                 <div class="project_overlay">
+                    <p>An absurdist metroidvania-like game set in an intergalactic gas station. Portuguese only</p>
+                    <a href="https://masterproject.itch.io/iss-iporanga-space-station" target="_blank">
+                        <img src="Images/itchio.png">
+                    </a>
+                </div>
+                <img src="Images/Iporanga Space Station.png">
+            </div>
+
+            <div class="project">
+                <div class="project_overlay">
                     <iframe src="https://www.youtube.com/embed/TSDcv-iXQqE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    <p>Narrative-focused cryptography-themed game, set in a wartorn country during the 1940s. Portuguese only.</p>
+                    <p>Narrative-focused cryptography-themed game, set in a wartorn country during the 1940s. Portuguese only</p>
                     <a href="https://gamejolt.com/games/cifra/569637" target="_blank">
                         <img src="Images/Gamejolt.png">
                     </a>
@@ -33,7 +43,7 @@
             <div class="project">
                 <div class="project_overlay">
                     <iframe src="https://www.youtube.com/embed/nfqVSoxF1ho" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    <p>Minecraft map simulating the social deduction game Among Us, implemented using command blocks. Takes a more "physical" take compared to Phoenix SC's version.</p>
+                    <p>Minecraft map simulating the social deduction game Among Us, implemented using command blocks. Takes a more "physical" take compared to Phoenix SC's version</p>
                     <a href="https://github.com/MasterProjectLC/among_us_minecraft" target="_blank">
                         <img src="Images/GitHub.png">
                     </a>
@@ -44,7 +54,7 @@
             <div class="project">
                 <div class="project_overlay">
                     <iframe src="https://www.youtube.com/embed/eK5wpTAujIg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    <p>Defense typing game with a neon-like aesthetic and soundtrack inspired by early-Internet era songs.</p>
+                    <p>Defense typing game with a neon-like aesthetic and soundtrack inspired by early-Internet era songs</p>
                     <div class="project_overlay_2">
                         <a href="https://masterproject.itch.io/lightstreak" target="_blank">
                             <img src="Images/itchio.png">
@@ -71,7 +81,7 @@
             <div class="project">
                 <div class="project_overlay">
                     <iframe src="https://www.youtube.com/embed/uTrYnucfqP0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    <p>Action game with random spells and strategic improvisation</p>
+                    <p>Action game with random spells and strategic improvisation. Portuguese only</p>
                     <a href="https://masterproject.itch.io/abracajur" target="_blank">
                         <img src="Images/itchio.png">
                     </a>
@@ -115,7 +125,7 @@
             <div class="project">
                 <div class="project_overlay">
                     <iframe src="https://www.youtube.com/embed/Tojkcc5MncY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    <p>Hero-based card game with simultaneous turns and predicting plays.</p>
+                    <p>Hero-based card game with simultaneous turns and predicting plays</p>
                     <a href="https://masterproject.itch.io/chronos-arena" target="_blank">
                         <img src="Images/itchio.png">
                     </a>
