--- a/english.html
+++ b/english.html
@@ -20,24 +20,8 @@
 
             <div class="project">
                 <div class="project_overlay">
-                    <p>Unmask the conspiracy behind this Windows 95-esque Operating System. LD48.</p>
-                    <div class="project_overlay_2">
-                        <a href="https://misterproject.itch.io/thaumos" target="_blank">
-                            <img src="Images/itchio.png">
-                        </a>
-
-                        <a href="https://ldjam.com/events/ludum-dare/48/thaumos" target="_blank">
-                            <img src="Images/LudumDare.png">
-                        </a>
-                    </div>
-                </div>
-                <img src="Images/ThaumOS.png">
-            </div>
-
-            <div class="project">
-                <div class="project_overlay">
                     <p>An absurdist metroidvania-like game set in an intergalactic gas station. Portuguese only</p>
-                    <a href="https://misterproject.itch.io/iss-iporanga-space-station" target="_blank">
+                    <a href="https://masterproject.itch.io/iss-iporanga-space-station" target="_blank">
                         <img src="Images/itchio.png">
                     </a>
                 </div>
@@ -60,7 +44,7 @@
                 <div class="project_overlay">
                     <iframe src="https://www.youtube.com/embed/nfqVSoxF1ho" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <p>Minecraft map simulating the social deduction game Among Us, implemented using command blocks. Takes a more "physical" take compared to Phoenix SC's version</p>
-                    <a href="https://github.com/MisterProjectLC/among_us_minecraft" target="_blank">
+                    <a href="https://github.com/MasterProjectLC/among_us_minecraft" target="_blank">
                         <img src="Images/GitHub.png">
                     </a>
                 </div>
@@ -72,11 +56,11 @@
                     <iframe src="https://www.youtube.com/embed/eK5wpTAujIg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <p>Defense typing game with a neon-like aesthetic and soundtrack inspired by early-Internet era songs</p>
                     <div class="project_overlay_2">
-                        <a href="https://misterproject.itch.io/lightstreak" target="_blank">
+                        <a href="https://masterproject.itch.io/lightstreak" target="_blank">
                             <img src="Images/itchio.png">
                         </a>
 
-                        <a href="https://gotm.io/misterproject/lightstreak" target="_blank">
+                        <a href="https://gotm.io/masterproject/lightstreak" target="_blank">
                             <img src="Images/Gotm.png">
                         </a>
                     </div>
@@ -87,7 +71,7 @@
             <div class="project">
                 <div class="project_overlay">
                     <p>Action game with limited control keys. Bind and rebind them in real-time to adapt to different situations.</p>
-                    <a href="https://misterproject.itch.io/dont-blame-the-controller" target="_blank">
+                    <a href="https://masterproject.itch.io/dont-blame-the-controller" target="_blank">
                         <img src="Images/itchio.png">
                     </a>
                 </div>
@@ -98,7 +82,7 @@
                 <div class="project_overlay">
                     <iframe src="https://www.youtube.com/embed/uTrYnucfqP0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <p>Action game with random spells and strategic improvisation. Portuguese only</p>
-                    <a href="https://misterproject.itch.io/abracajur" target="_blank">
+                    <a href="https://masterproject.itch.io/abracajur" target="_blank">
                         <img src="Images/itchio.png">
                     </a>
                 </div>
@@ -109,7 +93,7 @@
                 <div class="project_overlay">
                     <p>Asteroids-esque game - control gravity to disrupt and destroy enemies</p>
                     <div class="project_overlay_2">
-                        <a href="https://misterproject.itch.io/gravitoids" target="_blank">
+                        <a href="https://masterproject.itch.io/gravitoids" target="_blank">
                             <img src="Images/itchio.png">
                         </a>
 
@@ -126,7 +110,7 @@
                     <iframe src="https://www.youtube.com/embed/AXc_niYGQ0g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <p>A medieval diplomacy game based on the Prisoner's Dilemma</p>
                     <div class="project_overlay_2">
-                        <a href="https://misterproject.itch.io/the-long-game" target="_blank">
+                        <a href="https://masterproject.itch.io/the-long-game" target="_blank">
                             <img src="Images/itchio.png">
                         </a>
 
@@ -142,7 +126,7 @@
                 <div class="project_overlay">
                     <iframe src="https://www.youtube.com/embed/Tojkcc5MncY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <p>Hero-based card game with simultaneous turns and predicting plays</p>
-                    <a href="https://misterproject.itch.io/chronos-arena" target="_blank">
+                    <a href="https://masterproject.itch.io/chronos-arena" target="_blank">
                         <img src="Images/itchio.png">
                     </a>
                 </div>
