--- a/index.html
+++ b/index.html
@@ -3,152 +3,23 @@
     <head>
         <meta charset="utf-8">
         <meta name="author" content="Dan Isamu">
-        <meta name="description" content="MasterProject's personal page. Mostly includes personal projects and other related stuff.">
+        <meta name="description" content="MisterProject's personal page. Mostly includes personal projects and other related stuff.">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-        <link href="Styles/style.css" rel="stylesheet" type="text/css">
+        <link href="Styles/style2.css" rel="stylesheet" type="text/css">
         <link rel="icon" href="Images/Icon.png">
-        <title>Dan Isamu - MasterProject</title>
+        <title>Dan Isamu - MisterProject</title>
     </head>
 
+    <script src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
+    <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
+    <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
+
     <body>
-        <div id="header">
-          <h1>Dan Isamu - Projects</h1>
-          <h2>masterprojectlc.github.io</h2>
-        </div>
-        <main>
-            <p>Still in construction!</p>
+        <div id="start"></div>
 
-            <div class="project">
-                <div class="project_overlay">
-                    <p>Unmask the conspiracy behind this Windows 95-esque Operating System. LD48.</p>
-                    <div class="project_overlay_2">
-                        <a href="https://misterproject.itch.io/thaumos" target="_blank">
-                            <img src="Images/itchio.png">
-                        </a>
-
-                        <a href="https://ldjam.com/events/ludum-dare/48/thaumos" target="_blank">
-                            <img src="Images/LudumDare.png">
-                        </a>
-                    </div>
-                </div>
-                <img src="Images/ThaumOS.png">
-            </div>
-
-            <div class="project">
-                <div class="project_overlay">
-                    <p>An absurdist metroidvania-like game set in an intergalactic gas station. Portuguese only</p>
-                    <a href="https://misterproject.itch.io/iss-iporanga-space-station" target="_blank">
-                        <img src="Images/itchio.png">
-                    </a>
-                </div>
-                <img src="Images/Iporanga Space Station.png">
-            </div>
-
-            <div class="project">
-                <div class="project_overlay">
-                    <iframe src="https://www.youtube.com/embed/TSDcv-iXQqE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    <p>Narrative-focused cryptography-themed game, set in a wartorn country during the 1940s. Portuguese only</p>
-                    <a href="https://gamejolt.com/games/cifra/569637" target="_blank">
-                        <img src="Images/Gamejolt.png">
-                    </a>
-                </div>
-                <img src="Images/Cifra.png">
-            </div>
-
-
-            <div class="project">
-                <div class="project_overlay">
-                    <iframe src="https://www.youtube.com/embed/nfqVSoxF1ho" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    <p>Minecraft map simulating the social deduction game Among Us, implemented using command blocks. Takes a more "physical" take compared to Phoenix SC's version</p>
-                    <a href="https://github.com/MisterProjectLC/among_us_minecraft" target="_blank">
-                        <img src="Images/GitHub.png">
-                    </a>
-                </div>
-                <img src="Images/Minecraft Among Us.png">
-            </div>
-
-            <div class="project">
-                <div class="project_overlay">
-                    <iframe src="https://www.youtube.com/embed/eK5wpTAujIg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    <p>Defense typing game with a neon-like aesthetic and soundtrack inspired by early-Internet era songs</p>
-                    <div class="project_overlay_2">
-                        <a href="https://misterproject.itch.io/lightstreak" target="_blank">
-                            <img src="Images/itchio.png">
-                        </a>
-
-                        <a href="https://gotm.io/misterproject/lightstreak" target="_blank">
-                            <img src="Images/Gotm.png">
-                        </a>
-                    </div>
-                </div>
-                <img src="Images/Lightstreak.png">
-            </div>
-
-            <div class="project">
-                <div class="project_overlay">
-                    <p>Action game with limited control keys. Bind and rebind them in real-time to adapt to different situations.</p>
-                    <a href="https://misterproject.itch.io/dont-blame-the-controller" target="_blank">
-                        <img src="Images/itchio.png">
-                    </a>
-                </div>
-                <img src="Images/DBTC.png">
-            </div>
-
-            <div class="project">
-                <div class="project_overlay">
-                    <iframe src="https://www.youtube.com/embed/uTrYnucfqP0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    <p>Action game with random spells and strategic improvisation. Portuguese only</p>
-                    <a href="https://misterproject.itch.io/abracajur" target="_blank">
-                        <img src="Images/itchio.png">
-                    </a>
-                </div>
-                <img src="Images/Abracajur.png">
-            </div>
-
-            <div class="project">
-                <div class="project_overlay">
-                    <p>Asteroids-esque game - control gravity to disrupt and destroy enemies</p>
-                    <div class="project_overlay_2">
-                        <a href="https://misterproject.itch.io/gravitoids" target="_blank">
-                            <img src="Images/itchio.png">
-                        </a>
-
-                        <a href="https://gamejolt.com/games/gravitoids/468599" target="_blank">
-                            <img src="Images/Gamejolt.png">
-                        </a>
-                    </div>
-                </div>
-                <img src="Images/Gravitoids.png">
-            </div>
-
-            <div class="project">
-                <div class="project_overlay">
-                    <iframe src="https://www.youtube.com/embed/AXc_niYGQ0g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    <p>A medieval diplomacy game based on the Prisoner's Dilemma</p>
-                    <div class="project_overlay_2">
-                        <a href="https://misterproject.itch.io/the-long-game" target="_blank">
-                            <img src="Images/itchio.png">
-                        </a>
-
-                        <a href="https://gamejolt.com/games/the_long_game/457693" target="_blank">
-                            <img src="Images/Gamejolt.png">
-                        </a>
-                    </div>
-                </div>
-                <img src="Images/TheLongGame.png">
-            </div>
-
-            <div class="project">
-                <div class="project_overlay">
-                    <iframe src="https://www.youtube.com/embed/Tojkcc5MncY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    <p>Hero-based card game with simultaneous turns and predicting plays</p>
-                    <a href="https://misterproject.itch.io/chronos-arena" target="_blank">
-                        <img src="Images/itchio.png">
-                    </a>
-                </div>
-                <img src="Images/ChronosArena.png">
-            </div>
-        </main>
-
+        <script type="text/jsx" src="Scripts/project.js"></script>
+        <script type="text/jsx" src="Scripts/main.js"></script>
     </body>
+
 </html>
