project box size fix

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="MisterProject's personal page. Mostly includes personal projects and other related stuff.">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-        <link href="Styles/style2.css" rel="stylesheet" type="text/css">
+        <link href="Styles/style.css" rel="stylesheet" type="text/css">
         <link rel="icon" href="Images/Icon.png">
         <title>Dan Isamu - MisterProject</title>
     </head>
