fallback to json if external server fails

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <body>
         <div id="start"></div>
 
+        <script type="text/jsx" src="Data/projects.js"></script>
+        <script type="text/jsx" src="Data/descriptions.js"></script>
         <script type="text/jsx" src="Scripts/project.js"></script>
         <script type="text/jsx" src="Scripts/main.js"></script>
     </body>
