--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
-﻿<!DOCTYPE html>
-<html lang = "en-US">
+﻿<!doctype html>
+<html lang = "en-US" style="scroll-behavior: smooth">
     <head>
         <meta charset="utf-8">
         <meta name="author" content="Dan Isamu">
         <meta name="description" content="MisterProject's personal page. Mostly includes personal projects and other related stuff.">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
         <link href="Styles/style.css" rel="stylesheet" type="text/css">
-        <link rel="icon" href="Images/Icon.png">
+        <link rel="icon" href="Images/Icon2.png">
         <title>Dan Isamu - MisterProject</title>
     </head>
 
@@ -19,7 +21,8 @@
         <div id="start"></div>
 
         <script type="text/jsx" src="Data/projects.js"></script>
-        <script type="text/jsx" src="Data/descriptions.js"></script>
+        <script type="text/jsx" src="Scripts/about.js"></script>
+        <script type="text/jsx" src="Scripts/frame.js"></script>
         <script type="text/jsx" src="Scripts/project.js"></script>
         <script type="text/jsx" src="Scripts/main.js"></script>
     </body>
